[package]
name = "nemulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[env]
RUST_BACKTRACE = "1"

[dependencies]
backtrace = "0.3"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["gfx", "unsafe_textures"]