[package]
name = "nemulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
tui = "0.19"
crossterm = "0.25"
postgres = "0.19.7"
dotenv = "0.15.0"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["gfx", "unsafe_textures"]
